2008-12-24  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Fixed CommandQuit(), it will not
	  cause a reconnect anymore by preparing the IRC library and the Listen()
	  thread before we send the QUIT to the server. (closes trac bug #139)

2008-12-19  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Don't create a new chat for outgoing
	  notices, only use it if it's already there.

2008-12-19  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Notices are not highlights and
	  incoming and outgoing notices always create a chat (when missing).
	  (closes trac bug #45)

2008-12-17  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Implemented distinction of event and
	  normal messages. (closes trac ticket #66)

2008-08-31  Mirco Bauer <meebey@meebey.net> 

	* Engine-IRC.mdp: Added po files to MonoDevelop projects.

2008-08-31  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Implemented new commands: /amsg
	  /anotice /ame. (closes trac ticket #109)
	
	  Fixed crash bug in /notice command. (closes trac ticket #108)
	
	  Fixed display bug in /msg #channel when being in the channel.

2008-08-25  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Sync person chats after re-enabling
	  them in OnConnected, else they don't get new messages. (closes trac bug
	  #99)

2008-08-24  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Using LibraryCatalog now.

2008-08-24  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Kill threads we started when
	  disconnecting.

2008-08-21  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Dispose all chats after quitting in
	  CommandQuit().

2008-08-05  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Colorize nicks in nick changes and
	  quit messages.
