@@ -1,3 +1,8 @@
+2008-12-28  Mirco Bauer <meebey@meebey.net> 
+
+	* Protocols/Irc/IrcProtocolManager.cs: Implemented /names command. (closes
+	  trac ticket #120)
+
 2008-12-24  Mirco Bauer <meebey@meebey.net> 
 
 	* Protocols/Irc/IrcProtocolManager.cs: Fixed CommandQuit(), it will not
